--- a/Binary_UWP/Binary_UWP.csproj
+++ b/Binary_UWP/Binary_UWP.csproj
@@ -97,10 +97,14 @@
     </Compile>
     <Compile Include="Converters\DateFormatConverter .cs" />
     <Compile Include="Models\Academy.cs" />
+    <Compile Include="Models\Flight.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\Ticket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\FlightService.cs" />
     <Compile Include="ViewModels\AcademyViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\FlightViewModel.cs" />
     <Compile Include="Views\AcademyView.xaml.cs">
       <DependentUpon>AcademyView.xaml</DependentUpon>
     </Compile>
@@ -134,6 +138,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.5</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
